--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.13",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
@@ -19,7 +20,13 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@types/chart.js": "^2.9.32",
+    "angular-bootstrap-md": "^11.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^3.4.1",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
