--- a/union/package.json
+++ b/union/package.json
@@ -17,10 +17,11 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.10",
+    "mongoose": "^5.12.11",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sift": "^13.5.2"
   }
 }
