--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ngx-pwa/local-storage": "^12.0.0",
     "@types/chart.js": "^2.9.32",
     "angular-bootstrap-md": "^11.0.0",
     "animate.css": "^4.1.1",
