--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "country-state-city": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
