--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,7 @@
     "country-state-city": "^2.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "mdbootstrap": "^4.20.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
