--- a/union/package.json
+++ b/union/package.json
@@ -22,6 +22,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.15",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sift": "^13.5.2"
